v1.1.1 api change